MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/Snagging__c.object-meta.xml
<CustomObject>
    <label>Snagging</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Snagging Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snaggings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>