MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/De_Snag_Comment__c.field-meta.xml
<CustomField>
    <fullName>De_Snag_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>De Snag Comment</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>