MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/External_Snag_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Snag_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Snag Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>