MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QA Snagging</fullName>
            </value>
            <value>
                <fullName>Contractor Snags Rectification</fullName>
            </value>
            <value>
                <fullName>QA Desnagging</fullName>
            </value>
            <value>
                <fullName>Customer Snagging</fullName>
            </value>
            <value>
                <fullName>Customer Desnagging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>