MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Onsite_Snag_ID__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Snag_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onsite Snag ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>