MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Snag_Link__c.field-meta.xml
<CustomField>
    <fullName>Snag_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Snag Link</label>
    <referenceTo>Snagging__c</referenceTo>
    <relationshipLabel>Snag Links</relationshipLabel>
    <relationshipName>SnagLinks</relationshipName>
    <type>Lookup</type>
</CustomField>