MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Snag_Location__c.field-meta.xml
<CustomField>
    <fullName>Snag_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snag Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>