MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Snag_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Snag_Opened_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snag Opened Date</label>
    <type>DateTime</type>
</CustomField>