MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Snag_Re_Open_Count__c.field-meta.xml
<CustomField>
    <fullName>Snag_Re_Open_Count__c</fullName>
    <label>Snag Re Open Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>