MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Snag_Rectification_Link__c.field-meta.xml
<CustomField>
    <fullName>Snag_Rectification_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snag Rectification Link</label>
    <type>Url</type>
</CustomField>