MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Snag_Rectified_By__c.field-meta.xml
<CustomField>
    <fullName>Snag_Rectified_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snag Rectified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>