MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Snag_Reopened_Date__c.field-meta.xml
<CustomField>
    <fullName>Snag_Reopened_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snag Reopened Date</label>
    <type>DateTime</type>
</CustomField>