MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Snag_Type__c.field-meta.xml
<CustomField>
    <fullName>Snag_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snag Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>