MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/SnagLink__c.field-meta.xml
<CustomField>
    <fullName>SnagLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Snag Link</label>
    <type>Url</type>
</CustomField>