MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QA Snagging Completed</fullName>
            </value>
            <value>
                <fullName>Contractor QA Snag Rectification Completed</fullName>
            </value>
            <value>
                <fullName>Reopened to Contractor</fullName>
            </value>
            <value>
                <fullName>QA De-Snagging Completed</fullName>
            </value>
            <value>
                <fullName>Customer Snagging Completed</fullName>
            </value>
            <value>
                <fullName>Contractor Customer Snag Rectification Completed</fullName>
            </value>
            <value>
                <fullName>Customer De-Snagging Completed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Rectified</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>NIS</fullName>
            </value>
            <value>
                <fullName>In-Dispute</fullName>
            </value>
            <value>
                <fullName>Re-Opened</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>