MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/recordTypes/Customer_Snagging.recordType-meta.xml
<RecordType>
    <fullName>Customer_Snagging</fullName>
    <active>true</active>
    <label>Customer Snagging</label>
</RecordType>