MODON MRE BPDEV/force-app/main/default/objects/Snagging__c/recordTypes/QA_Snagging.recordType-meta.xml
<RecordType>
    <fullName>QA_Snagging</fullName>
    <active>true</active>
    <label>QA Snagging</label>
</RecordType>